bk_ida/gccida/g2/count_error
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_error/src/diagnostic.c:1400:6: error: use of undeclared identifier 'warning_message_3'
if ( warning_message_3 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_error/src/diagnostic.c:1407:1: error: use of undeclared identifier 'warning_message_3'
warning_message_3 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_error/src/obj/diagnostic.o] Error 1
